[package]
name = "pasted"
version = "1.2.17"
edition = "2021"
authors = ["drakeerv <drakeerv@outlook.com>"]
description = "A pastebin frontend written in Rust"
build = "build.rs"

[build-dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }

[dependencies]
axum = { version = "0.7.6", default-features = false, features = ["tokio", "http1", "json", "matched-path", "form"] }
byte-unit = "5.1.4"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
once_cell = "1.19.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
sled = { version = "0.34.7", default-features = false }
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal"] }
ureq = { version = "2.10.1", features = ["cookies"] }
ureq_multipart = "1.1.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
